--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel-"stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Progress Steps</title>
 </head>
 <body>
     <div class="container">
-        <div class="progress-continer">
+        <div class="progress-container">
             <div class="progress" id="progress"></div>
             <div class="circle  active">1</div>
             <div class="circle">2</div>
